[gd_scene load_steps=2 format=3 uid="uid://cqkb8dmn22any"]

[ext_resource type="Script" path="res://source/ui/TimeUI.gd" id="1_aqu4x"]

[node name="TimeUI" type="Control" groups=["TimeUI"]]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_aqu4x")

[node name="MinutesLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
vertical_alignment = 1

[node name="HoursLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -69.0
offset_bottom = 23.0
text = "dwdw"

[node name="DaysLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -62.0
offset_top = -22.0
offset_right = -22.0
offset_bottom = 1.0
